--- a/beda-bahan-tumbler-stainless.html
+++ b/beda-bahan-tumbler-stainless.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/beda-bahan-tumbler-stainless">
     <title>Beda Bahan Tumbler Stainless SUS 304 vs 316: Mana yang Aman? | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pahami perbedaan stainless steel grade 304 dan 316 untuk souvenir tumbler. Ketahui mana yang food grade, anti-karat, dan aman untuk kesehatan.">
     <meta name="author" content="Maroon Souvenir">
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Beda Bahan Tumbler Stainless SUS 304 vs 316">
     <meta property="og:description"
         content="Jangan tertipu harga murah! Pelajari beda kualitas stainless steel agar souvenir kantor Anda aman dan awet.">
-    <meta property="og:image" content="../assets/cat-drinkware.png">
+    <meta property="og:image" content="../assets/cat-drinkware.webp">
     <meta property="og:type" content="article">
 
     <!-- Fonts & Icons -->
@@ -30,7 +30,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -58,7 +58,7 @@
             <p style="color: var(--muted-foreground); margin-bottom: 2rem;">Ditulis oleh <strong>Tim Redaksi
                     Maroon</strong> â€¢ 4 menit baca</p>
 
-            <img src="assets/cat-drinkware.png" alt="Stainless Steel Tumbler"
+            <img src="assets/cat-drinkware.webp" alt="Stainless Steel Tumbler"
                 style="width: 100%; border-radius: 1rem; margin-bottom: 3rem;">
 
             <div class="prose" style="line-height: 1.8; color: var(--foreground);">
@@ -119,7 +119,7 @@
             <!-- Author Bio -->
             <div
                 style="margin-top: 4rem; padding: 2rem; background: #F8FAFC; border-radius: 1rem; display: flex; align-items: center; gap: 1.5rem;">
-                <img src="assets/logo.png" alt="Maroon Team" style="width: 60px; height: 60px; object-fit: contain;">
+                <img src="assets/logo.webp" alt="Maroon Team" style="width: 60px; height: 60px; object-fit: contain;">
                 <div>
                     <h4 style="margin-bottom: 0.5rem;">Tentang Penulis</h4>
                     <p style="font-size: 0.9rem; color: var(--muted-foreground); margin: 0;">Tim Maroon Souvenir
