--- a/blog-3.html
+++ b/blog-3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/blog-3">
     <title>Blog & Wawasan Souvenir Kantor - Page 3 | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Halaman 3 - Pusat wawasan (Knowledge Hub) seputar vendor souvenir kantor, tips branding, rekomendasi corporate gifts, dan strategi promosi perusahaan.">
     <meta name="keywords"
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -265,10 +265,10 @@
                         <div class="widget-card" style="margin-top: 2rem;">
                             <h3 class="widget-title">Kategori Populer</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Drinkware & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Seminar Kits</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Drinkware & Tumbler</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Seminar Kits</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Premium Gifts</a></li>
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
@@ -362,4 +362,3 @@
 </body>
 
 </html>
-
