--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/about">
     <title>Tentang Maroon Souvenir - Vendor Corporate Gift No.1 Malang & Malang Raya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Cerita di balik Maroon Souvenir, partner strategi hampers & gift set perusahaan Anda. Spesialis parcel premium custom, amanah, dan bergaransi di Malang.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tentang Maroon Souvenir - Partner Branding Terpercaya">
     <meta property="og:description"
         content="Lebih dari sekadar vendor, kami adalah partner strategis Anda dalam menciptakan corporate gift yang berkesan.">
-    <meta property="og:image" content="assets/about-team.png">
+    <meta property="og:image" content="assets/about-team.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/about">
     <meta property="og:type" content="website">
 
@@ -73,7 +73,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -108,7 +108,7 @@
             <!-- Visual Hero -->
             <div
                 style="margin-top: 2rem; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow-card); position: relative;">
-                <img src="assets/about-workshop.png" alt="Suasana Workshop Produksi Maroon Souvenir Surabaya"
+                <img src="assets/about-workshop.webp" alt="Suasana Workshop Produksi Maroon Souvenir Surabaya"
                     style="width: 100%; height: auto; display: block;" loading="lazy">
                 <div
                     style="position: absolute; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.6); color: white; padding: 1rem; text-align: left;">
@@ -152,7 +152,7 @@
     <section class="section-padding">
         <div class="container grid md-grid-cols-2 gap-8 items-center">
             <div>
-                <img src="assets/about-team.png" alt="Tim Admin Profesional Maroon Souvenir"
+                <img src="assets/about-team.webp" alt="Tim Admin Profesional Maroon Souvenir"
                     style="width: 100%; border-radius: var(--radius-md); border: 2px solid #1E293B;" loading="lazy">
             </div>
             <div>
@@ -299,7 +299,7 @@
             <!-- Embed Map Placeholder (Static Image for Speed/Design, or actual embed) -->
             <div style="height: 350px; background: #ddd; border-radius: 12px; overflow: hidden; position: relative;">
                 <!-- Using the delivery image as a placeholder for map/logistics area -->
-                <img src="assets/about-delivery.png" alt="Peta Lokasi Maroon Souvenir Surabaya"
+                <img src="assets/about-delivery.webp" alt="Peta Lokasi Maroon Souvenir Surabaya"
                     style="width: 100%; height: 100%; object-fit: cover;">
                 <div
                     style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 1rem; border-radius: 8px; box-shadow: var(--shadow-hard);">
@@ -429,4 +429,3 @@
 </body>
 
 </html>
-
