--- a/alat-makan-kayu.html
+++ b/alat-makan-kayu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/alat-makan-kayu">
     <title>Set Alat Makan Kayu & Sedotan Stainless: Souvenir Zero Waste | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat Souvenir Cutlery Set Kayu (Sendok Garpu Travel) dan Sedotan Stainless Custom di Surabaya. Pilihan terbaik untuk kampanye BYO (Bring Your Own) dan Wedding Souvenir.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cutlery Set Kayu & Sedotan Stainless: Gaya Hidup Zero Waste">
     <meta property="og:description"
         content="Bantu karyawan dan klien Anda mengurangi sampah plastik saat makan siang. Berikan Set Alat Makan Kayu Travel yang estetis.">
-    <meta property="og:image" content="assets/alat-makan-kayu.png">
+    <meta property="og:image" content="assets/alat-makan-kayu.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/alat-makan-kayu">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Set Alat Makan Kayu & Sedotan Stainless: Souvenir Zero Waste Kantor",
             "image": [
-                "https://hampersmalang.web.id/assets/alat-makan-kayu.png",
-                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.png"
+                "https://hampersmalang.web.id/assets/alat-makan-kayu.webp",
+                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -322,7 +322,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/alat-makan-kayu.png"
+                        <img src="assets/alat-makan-kayu.webp"
                             alt="Set Sendok Garpu Kayu dan Sedotan Stainless dalam Pouch Kanvas"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -425,7 +425,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-ramah-lingkungan.png" alt="Koleksi Lengkap Souvenir Eco"
+                        <img src="assets/souvenir-ramah-lingkungan.webp" alt="Koleksi Lengkap Souvenir Eco"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Mulai gaya hidup minim sampah dari meja kantor Anda.
@@ -509,7 +509,7 @@
                             <div
                                 style="background: white; border: 2px solid #C2410C; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/alat-makan-kayu.png" alt="Promo Cutlery Set"
+                                    <img src="assets/alat-makan-kayu.webp" alt="Promo Cutlery Set"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(124, 45, 18, 0.8));">
@@ -540,7 +540,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -576,8 +576,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa- mug-hot"></i> Food & Drinkware</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa- mug-hot"></i>
+                                        Food & Drinkware</a></li>
                                 <li class="cat-item"><a href="category-lifestyle"><i class="fa-solid fa-heart"></i>
                                         Lifestyle</a></li>
                             </ul>
@@ -589,7 +589,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Sustainable Gifts">
                                 <div>
@@ -607,7 +607,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/eco-notebook.png"
+                                <img src="assets/eco-notebook.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit Eco">
                                 <div>
@@ -624,7 +624,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/cat-drinkware.png"
+                                <img src="assets/cat-drinkware.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler">
                                 <div>
@@ -775,5 +775,3 @@
 </body>
 
 </html>
-
-
