--- a/blog-6.html
+++ b/blog-6.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/blog-6">
     <title>Blog & Wawasan Souvenir Kantor - Page 6 | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Halaman 6 - Pusat wawasan (Knowledge Hub) seputar vendor souvenir kantor, tips branding, rekomendasi corporate gifts, dan strategi promosi perusahaan.">
     <meta name="author" content="Maroon Souvenir">
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
